# ks-xlsx-parser

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  SECURITY.md  TEST_PLAN.md  pyproject.toml
.claude/: settings.json
.claude/skills/excel-extraction-pipeline-improver/: SKILL.md
.cursor/skills/excel-stress-tester-builder/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  parser_edge_case.yml
.github/workflows/: ci.yml  pages.yml  release.yml
.serena/: architecture.md  project.yml
docs/: MAINTAINERS.md  PARSER_KNOWN_ISSUES.md  RALPH_LOOP.md  WORKBOOK_GRAPH_SPEC.md  corpora.md
docs/iterations/: 2026-03-02-ralph-1.md
docs/launch/: ANNOUNCEMENTS.md  MEDIUM_ARTICLE.md  RELEASE_NOTES_v0.1.1.md  SEO.md
docs/wiki/: API-Reference.md  Benchmark-vs-hucre.md  Data-Models.md  Home.md  Pipeline-Internals.md  Quick-Start.md  Web-API.md
examples/: demo.py  engineering_calcs.xlsx  financial_model.xlsx  generate_examples.py  project_tracker.xlsx  sales_dashboard.xlsx
examples/stress_test/: STRESS_TEST_RESULTS.md  built_reference.json  complex_excel_builder.py  merge_stress_across.xlsx  merge_stress_table_header.xlsx  reference_spec.json  stress_level_12.xlsx  stress_level_16.xlsx  stress_level_19.xlsx  stress_level_20.xlsx  stress_level_21.xlsx  stress_level_23.xlsx  stress_level_24.xlsx  stress_level_25.xlsx  stress_level_3.xlsx  stress_level_7.xlsx  stress_results.json  stress_test_runner.py
rust/ks_xlsx_core/: Cargo.toml  README.md  REMOVAL.md  pyproject.toml
rust/ks_xlsx_core/src/: formula.rs  lib.rs
scripts/: build_testbench.py  compare_docling.py  download_corpora.sh  generate_enterprise_fixtures.py  publish_wiki.sh  ralph_loop_claude_cli.sh  ralph_loop_improve.py  ralph_prompt.md  run_enterprise_metrics.py  track_corpus_metrics.py
site/: index.html  robots.txt  sitemap.xml
src/: api.py  pipeline.py
src/analysis/: __init__.py  light_block_detector.py  llm_artifacts.py  pattern_splitter.py  table_assembler.py  table_grouper.py  template_extractor.py  tree_builder.py
src/annotation/: __init__.py  block_splitter.py  cell_annotator.py
src/charts/: __init__.py  chart_extractor.py
src/chunking/: __init__.py  chunker.py  segmenter.py
src/comparison/: template_comparator.py
src/export/: model_exporter.py
src/formula/: dependency_builder.py  formula_parser.py
src/ks_xlsx_parser/: __init__.py
src/models/: __init__.py  common.py  dependency.py  shape.py  table_structure.py  template.py  tree.py
src/parsers/: __init__.py  calamine_core.py  cell_parser.py  sheet_parser.py  table_parser.py  workbook_parser.py
src/rendering/: __init__.py  html_renderer.py  text_renderer.py
src/storage/: serializer.py
src/utils/: __init__.py  logging_config.py
src/verification/: __init__.py  stage_verifier.py
src/xlsx_parser/: __init__.py  api.py  pipeline.py
src/xlsx_parser/analysis/: __init__.py  light_block_detector.py  llm_artifacts.py  pattern_splitter.py  table_assembler.py  table_grouper.py  template_extractor.py  tree_builder.py
src/xlsx_parser/annotation/: block_splitter.py  cell_annotator.py
src/xlsx_parser/charts/: chart_extractor.py
src/xlsx_parser/chunking/: chunker.py  segmenter.py
src/xlsx_parser/comparison/: __init__.py  template_comparator.py
src/xlsx_parser/export/: __init__.py  model_exporter.py
src/xlsx_parser/formula/: __init__.py  dependency_builder.py  formula_parser.py
src/xlsx_parser/models/: __init__.py  block.py  cell.py  chart.py  common.py  dependency.py  shape.py  sheet.py  table.py  workbook.py
src/xlsx_parser/parsers/: cell_parser.py  sheet_parser.py  table_parser.py  workbook_parser.py
src/xlsx_parser/rendering/: html_renderer.py  text_renderer.py
src/xlsx_parser/storage/: __init__.py  serializer.py
src/xlsx_parser/verification/: __init__.py  stage_verifier.py
testBench/: README.md
testBench/enterprise/: financial_model.xlsx  forecast_model.xlsx  inventory_tracker.xlsx  operations_tracker.xlsx
testBench/real_world/: data_inventory.xlsx
testBench/stress/curated/: stress_level_0.xlsx  stress_level_1.xlsx  stress_level_10.xlsx  stress_level_11.xlsx  stress_level_13.xlsx  stress_level_14.xlsx  stress_level_15.xlsx  stress_level_17.xlsx  stress_level_18.xlsx  stress_level_2.xlsx  stress_level_22.xlsx  stress_level_4.xlsx  stress_level_5.xlsx  stress_level_6.xlsx  stress_level_8.xlsx  stress_level_9.xlsx
testBench/stress/merges/: merge_stress_dense_grid.xlsx  merge_stress_empty_master.xlsx  merge_stress_vertical.xlsx
tests/: conftest.py  test_charts.py  test_corpus_robustness.py  test_cross_validation.py  test_enterprise_scoring.py  test_formula_handling.py  test_formula_parser.py  test_llm_artifacts.py  test_models.py  test_multi_table_layout.py  test_parsers.py  test_pipeline.py  test_real_world_datasets.py  test_rendering.py  test_segmentation.py  test_stage_verification.py  test_structural_invariants.py  test_testbench_roundtrip.py
tests/benchmarks/: __init__.py  _driver.py  _mem.py  _runner.py  _schema.py  vs_hucre.py
tests/benchmarks/adapters/: __init__.py  ks_adapter.py
tests/benchmarks/hucre_node/: hucre_adapter.mjs  package.json  pnpm-lock.yaml
tests/helpers/: __init__.py  calamine_reader.py  corpus_downloader.py  invariant_checker.py  value_comparator.py
