[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlsx-parser"
version = "0.1.0"
description = "Production-grade Excel Workflow Parser for RAG + auditability systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "XLSX Parser Contributors"}
]
keywords = [
    "excel",
    "xlsx",
    "parser",
    "rag",
    "workbook",
    "spreadsheet",
    "extraction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
    "openpyxl>=3.1.0",
    "pydantic>=2.0",
    "lxml>=4.9.0",
    "xxhash>=3.0.0",
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/arnav2/XLSXParser"
Repository = "https://github.com/arnav2/XLSXParser"
Documentation = "https://github.com/arnav2/XLSXParser#readme"

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "python-calamine>=0.2.0",
    "requests>=2.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "crossval: cross-validation tests against calamine",
    "invariant: structural invariant tests",
    "corpus: external corpus tests (skipped by default)",
    "slow: tests taking >10 seconds",
]
addopts = "-m 'not corpus'"

[tool.setuptools.packages.find]
where = ["src"]
