[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ks-xlsx-core"
version = "0.1.0"
description = "Rust fast-path for ks-xlsx-parser. Removable when python-calamine upstreams formula support."
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
module-name = "ks_xlsx_core"
bindings = "pyo3"
features = ["pyo3/extension-module"]
